[package]
name = "vibelapse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"] }
image = "0.23"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
futures = "0.3"
